--- a/SRTNGLGRTHMS/src/srtnglgrthms/view/OverviewLayout.fxml
+++ b/SRTNGLGRTHMS/src/srtnglgrthms/view/OverviewLayout.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="srtnglgrthms.controller.OverviewController">
+<AnchorPane prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="srtnglgrthms.controller.OverviewController">
    <children>
       <BorderPane layoutX="125.0" layoutY="50.0" prefHeight="300.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <left>
@@ -16,21 +16,9 @@
          <center>
             <SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0" BorderPane.alignment="CENTER">
               <items>
-                  <AnchorPane>
-                  	<children>
-                  		<BarChart fx:id="barChart" layoutX="-100.0" layoutY="-100.0" legendVisible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                  			<xAxis>
-                  				<CategoryAxis side="BOTTOM" tickMarkVisible="false" />
-                  			</xAxis>
-                  			<yAxis>
-                  				<NumberAxis lowerBound="0" side="LEFT" tickUnit="10" upperBound="100" />
-                  			</yAxis>
-                  		</BarChart>
-                  	</children>
-                  </AnchorPane>
+                  <fx:include source="SingleBarChartLayout.fxml" />
                 <AnchorPane maxHeight="35.0" minHeight="35.0" minWidth="0.0" prefHeight="30.0" prefWidth="368.0">
                      <children>
-                        <ProgressBar layoutX="135.0" layoutY="10.0" prefHeight="15.0" prefWidth="100.0" progress="0.5" />
                         <Button fx:id="stepBtn" alignment="BOTTOM_LEFT" layoutX="15.0" layoutY="5.0" mnemonicParsing="false" text="Léptet" />
                         <Button fx:id="animBtn" alignment="BOTTOM_LEFT" layoutX="75.0" layoutY="5.0" mnemonicParsing="false" text="Indít" />
                      </children>
