--- a/SRTNGLGRTHMS/src/srtnglgrthms/view/SingleBarChartLayout.fxml
+++ b/SRTNGLGRTHMS/src/srtnglgrthms/view/SingleBarChartLayout.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.chart.*?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="srtnglgrthms.controller.SingleBarChartController">
 	<children>
 		<BarChart fx:id="barChart" layoutX="-100.0" layoutY="-100.0"
 			legendVisible="false" AnchorPane.bottomAnchor="0.0"
@@ -19,4 +19,3 @@
 		</BarChart>
 	</children>
 </AnchorPane>
-
