--- a/SRTNGLGRTHMS/src/srtnglgrthms/view/BarChartLayout.fxml
+++ b/SRTNGLGRTHMS/src/srtnglgrthms/view/BarChartLayout.fxml
@@ -3,7 +3,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.chart.*?>
 
-<AnchorPane prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="srtnglgrthms.controller.SingleBarChartController">
+<AnchorPane prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="srtnglgrthms.controller.BarChartController">
 	<children>
 		<BarChart fx:id="barChart" layoutX="-100.0" layoutY="-100.0"
 			legendVisible="false" AnchorPane.bottomAnchor="0.0"
