Fixed some algorithm, added QuickSort, but its not working yet

--- a/SRTNGLGRTHMS/src/srtnglgrthms/view/ListViewLayout.fxml
+++ b/SRTNGLGRTHMS/src/srtnglgrthms/view/ListViewLayout.fxml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="srtnglgrthms.controller.ListViewController">
-	<ListView fx:id="algorithmList" prefHeight="300.0" prefWidth="140.0"/>
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="srtnglgrthms.controller.ListViewController">
+   <children>
+   	<ListView fx:id="algorithmList" prefWidth="140.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+   </children>
 </AnchorPane>
-
