--- a/SRTNGLGRTHMS/src/srtnglgrthms/view/InfoTableViewLayout.fxml
+++ b/SRTNGLGRTHMS/src/srtnglgrthms/view/InfoTableViewLayout.fxml
@@ -5,13 +5,12 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.40">
+<AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="srtnglgrthms.controller.InfoTableController">
    <children>
-      <TableView layoutX="-94.0" layoutY="-105.0" prefHeight="95.0" prefWidth="106.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <TableView fx:id="tableView" layoutX="-94.0" layoutY="-105.0" prefHeight="95.0" prefWidth="106.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columns>
-          <TableColumn editable="false" prefWidth="75.0" sortable="false" />
-          <TableColumn editable="false" prefWidth="75.0" sortable="false" />
+          <TableColumn fx:id="nameColumn" editable="false" prefWidth="70.0" sortable="false" />
+          <TableColumn fx:id="valueColumn" editable="false" sortable="false" />
         </columns>
       </TableView>
    </children>
