--- a/SRTNGLGRTHMS/src/srtnglgrthms/view/OverviewListLayout.fxml
+++ b/SRTNGLGRTHMS/src/srtnglgrthms/view/OverviewListLayout.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="srtnglgrthms.controller.ListViewController">
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="srtnglgrthms.controller.OverviewListController">
    <children>
    	<ListView fx:id="algorithmList" prefWidth="140.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
    </children>
