--- a/SRTNGLGRTHMS/src/srtnglgrthms/view/InfoTableLayout.fxml
+++ b/SRTNGLGRTHMS/src/srtnglgrthms/view/InfoTableLayout.fxml
@@ -9,8 +9,8 @@
    <children>
       <TableView fx:id="tableView" layoutX="-94.0" layoutY="-105.0" prefHeight="95.0" prefWidth="106.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columns>
-          <TableColumn fx:id="nameColumn" editable="false" prefWidth="70.0" sortable="false" />
-          <TableColumn fx:id="valueColumn" editable="false" sortable="false" />
+          <TableColumn fx:id="nameColumn" editable="false" prefWidth="70.0" sortable="false" text="Tulajdonság" />
+          <TableColumn fx:id="valueColumn" editable="false" sortable="false" text="#" />
         </columns>
       </TableView>
    </children>
