--- a/SRTNGLGRTHMS/src/srtnglgrthms/view/OverViewDoubleChartLayout.fxml
+++ b/SRTNGLGRTHMS/src/srtnglgrthms/view/OverViewDoubleChartLayout.fxml
@@ -3,11 +3,10 @@
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.scene.layout.AnchorPane?>
 
-<SplitPane dividerPositions="0.5" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1">
+<SplitPane dividerPositions="0.5" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" orientation="VERTICAL" prefHeight="443.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="srtnglgrthms.controller.OverviewDoubleChartController">
   <items>
-      <fx:include source="OverviewChartLayout.fxml" />
-      <fx:include source="OverviewChartLayout.fxml" />
+      <fx:include fx:id="paneOne" source="OverviewChartLayout.fxml" />
+      <fx:include fx:id="paneTwo" source="OverviewChartLayout.fxml" />
   </items>
 </SplitPane>
