--- a/SRTNGLGRTHMS/src/srtnglgrthms/view/ManualInputLayout.fxml
+++ b/SRTNGLGRTHMS/src/srtnglgrthms/view/ManualInputLayout.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<SplitPane dividerPositions="0.5" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" orientation="VERTICAL" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="srtnglgrthms.controller.InputController">
+<SplitPane dividerPositions="0.5" orientation="VERTICAL" prefHeight="120.0" prefWidth="432.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="srtnglgrthms.controller.ManualInputController">
   <items>
       <ScrollPane>
          <content>
@@ -19,8 +19,8 @@
       </ScrollPane>
     <AnchorPane>
          <children>
-            <Button fx:id="randomBtn" layoutX="193.0" layoutY="11.0" mnemonicParsing="false" onAction="#randomBtnHandler" text="Feltöltés" />
-            <Button fx:id="okBtn" layoutX="260.0" layoutY="11.0" mnemonicParsing="false" onAction="#okBtnHandler" text="Ok" />
+            <Button fx:id="randomBtn" layoutX="120.0" layoutY="11.0" mnemonicParsing="false" onAction="#randomBtnHandler" text="Számok generálása" />
+            <Button fx:id="okBtn" layoutX="384.0" layoutY="11.0" mnemonicParsing="false" onAction="#okBtnHandler" text="Ok" />
             <TextField fx:id="sizeField" layoutX="50.0" layoutY="11.0" onAction="#createFields" prefHeight="25.0" prefWidth="50.0" />
             <Label layoutX="6.0" layoutY="15.0" text="Méret:" />
          </children></AnchorPane>
