--- a/SRTNGLGRTHMS/src/srtnglgrthms/view/MenuLayout.fxml
+++ b/SRTNGLGRTHMS/src/srtnglgrthms/view/MenuLayout.fxml
@@ -11,7 +11,7 @@
         <menus>
           <Menu mnemonicParsing="false" text="Fájl">
             <items>
-              <MenuItem mnemonicParsing="false" text="Bezárás" />
+              <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Bezárás" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Segítség">
