--- a/SRTNGLGRTHMS/src/srtnglgrthms/view/OverviewTableLayout.fxml
+++ b/SRTNGLGRTHMS/src/srtnglgrthms/view/OverviewTableLayout.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="srtnglgrthms.controller.InfoTableController">
+<AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="srtnglgrthms.controller.OverviewTableController">
    <children>
       <TableView fx:id="tableView" layoutX="-94.0" layoutY="-105.0" prefHeight="95.0" prefWidth="106.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columns>
