--- a/SRTNGLGRTHMS/src/srtnglgrthms/view/BenchmarkTableLayout.fxml
+++ b/SRTNGLGRTHMS/src/srtnglgrthms/view/BenchmarkTableLayout.fxml
@@ -7,10 +7,10 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="srtnglgrthms.controller.BenchmarkTableController">
    <children>
-      <TableView fx:id="tableView" layoutX="-94.0" layoutY="-105.0" prefHeight="95.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <TableView fx:id="tableView" prefHeight="95.0" prefWidth="300.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columns>
           <TableColumn fx:id="nameColumn" editable="false" prefWidth="70.0" sortable="false" text="Név" />
-          <TableColumn fx:id="compareColumn" editable="false" sortable="false" text="Összehasonlítások" />
+          <TableColumn fx:id="compareColumn" editable="false" sortable="false" text="Hasonlítások" />
             <TableColumn fx:id="moveColumn" prefWidth="75.0" text="Mozgatások" />
           <TableColumn fx:id="swapColumn" editable="false" sortable="false" text="Cserék" />
         </columns>
